[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicators-env"
version = "1.0.0"
description = "OpenEnv RL environment for NSE stock market technical indicators prediction."
requires-python = ">=3.12"
authors = [
    {name = "bawsi99"}
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "server"]
